deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
spec:
  selector:
    matchLabels:
      app: apache
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache
        image: gcr.io/searce-playground-v1/rushabhapache
        ports:
        - containerPort: 5000
